tests/e2e/scenarios/negative/compile_type_mismatch.ks
// Expected phase: compile — argument / binding type mismatch.

val s: String = 42
